implement add course route implement get all courses route with all queries implement get course by id
