# app.js
@@ -31,6 +31,7 @@ const connectDB = require("./db/connect");
 const authRouter = require("./routes/auth");
 const verifyRouter = require("./routes/verify");
 const userRouter = require("./routes/user");
+const coursesRouter = require("./routes/course");
 
 app.use(express.json());
 
@@ -53,6 +54,7 @@ app.get("/", (req, res) => {
 app.use("/api/auth", authRouter);
 app.use("/api/verify", authenticateUser, verifyRouter);
 app.use("/api/user", authenticateUser, userRouter);
+app.use("/api/courses", authenticateUser, coursesRouter);
 
 // Swagger documentation route
 app.use(
