# docs/swagger.yaml
@@ -414,7 +414,7 @@ paths:
                                 currentPassword:
                                     type: string
                                     default: ""
-                                image:
+                                profilePicture:
                                     type: string
                                     format: binary
                                     description: The image file to upload.
@@ -459,3 +459,256 @@ paths:
                                         type: string
                             example:
                                 msg: Current password is incorrect
+    /courses:
+        get:
+            summary: Get all courses data
+            tags:
+                - Courses Data
+            security:
+                - BearerAuth: []
+            parameters:
+                - name: category
+                  in: query
+                  description: Filter by category
+                  required: false
+                  schema:
+                      type: string
+                - name: search
+                  in: query
+                  description: Search courses by title or description
+                  required: false
+                  schema:
+                      type: string
+                - name: limit
+                  in: query
+                  description: Limit the number of results
+                  required: false
+                  schema:
+                      type: integer
+                      example: 10
+                - name: page
+                  in: query
+                  description: Page number for pagination
+                  required: false
+                  schema:
+                      type: integer
+                      example: 1
+            responses:
+                "200":
+                    description: Successfully retrieved the courses
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    nbHits:
+                                        type: integer
+                                        example: 100
+                                    courses:
+                                        type: array
+                                        items:
+                                            type: object
+                                            properties:
+                                                courseId:
+                                                    type: string
+                                                title:
+                                                    type: string
+                                                description:
+                                                    type: string
+                                                category:
+                                                    type: string
+                                                instructor:
+                                                    type: string
+                                                duration:
+                                                    type: string
+                            example:
+                                nbHits: 1
+                                courses:
+                                    - courseId: "12345"
+                                      title: Introduction to Programming
+                                      description: Learn the basics of programming.
+                                      category: Computer Science
+                                      instructor: John Doe
+                                      duration: 4 weeks
+        post:
+            summary: Create a new course
+            tags:
+                - Courses Data
+            security:
+                - BearerAuth: []
+            requestBody:
+                required: true
+                content:
+                    multipart/form-data:
+                        schema:
+                            type: object
+                            properties:
+                                title:
+                                    type: string
+                                description:
+                                    type: string
+                                price:
+                                    type: string
+                                category:
+                                    type: string
+                                coursePicture:
+                                    type: string
+                                    format: binary
+                                    description: The image file to upload.
+            responses:
+                "201":
+                    description: Course created successfully
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    id:
+                                        type: string
+                                    title:
+                                        type: string
+                                    description:
+                                        type: string
+                                    price:
+                                        type: string
+                                    picture:
+                                        type: string
+                                    category:
+                                        type: string
+                                    rates:
+                                        type: array
+                                    rating:
+                                        type: number
+                            example:
+                                id: 673f80618fd93e372cc54de5
+                                title: photoshop
+                                description: photoshop course
+                                price: "20"
+                                picture: https://example.com/wef.jpg
+                                category: graphic design
+                                rates:
+                                    - 0
+                                    - 0
+                                    - 0
+                                    - 0
+                                    - 0
+                                rating: 0
+                "400":
+                    description: Missing required fields
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    msg:
+                                        type: string
+                            example:
+                                msg: >-
+                                    Please provide title, description, price, category and course
+                                    picture
+    /courses/{courseId}:
+        get:
+            summary: Get a course by ID
+            tags:
+                - Courses Data
+            security:
+                - BearerAuth: []
+            parameters:
+                - name: courseId
+                  in: path
+                  required: true
+                  schema:
+                      type: string
+                      description: The ID of the course to retrieve
+            responses:
+                "200":
+                    description: Successfully retrieved the course
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    course:
+                                        type: object
+                                        properties:
+                                            rates:
+                                                type: array
+                                                items:
+                                                    type: integer
+                                                description: Array of ratings
+                                            rating:
+                                                type: integer
+                                                description: Calculated average rating
+                                            _id:
+                                                type: string
+                                                description: Course ID
+                                            instructorId:
+                                                type: string
+                                                description: Instructor ID
+                                            title:
+                                                type: string
+                                                description: Title of the course
+                                            description:
+                                                type: string
+                                                description: Description of the course
+                                            price:
+                                                type: string
+                                                description: Price of the course
+                                            category:
+                                                type: string
+                                                description: Category of the course
+                                            picture:
+                                                type: string
+                                                format: uri
+                                                description: URL to the course picture
+                                            createdAt:
+                                                type: string
+                                                format: date-time
+                                                description: Creation date of the course
+                                            updatedAt:
+                                                type: string
+                                                format: date-time
+                                                description: Last update date of the course
+                                            __v:
+                                                type: integer
+                                                description: Version key for the document
+                            example:
+                                course:
+                                    rates:
+                                        - 0
+                                        - 0
+                                        - 0
+                                        - 0
+                                        - 0
+                                    rating: 0
+                                    _id: 673f80618fd93e372cc54we5
+                                    instructorId: 673e45b7c8256w20449d5470
+                                    title: photoshop
+                                    description: photoshop course
+                                    price: "20"
+                                    category: graphic design
+                                    picture: https://example.com/example.jpg
+                                    createdAt: "2024-11-21T18:48:02.207Z"
+                                    updatedAt: "2024-11-21T18:48:02.207Z"
+                "400":
+                    description: Invalid or missing course ID
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    msg:
+                                        type: string
+                            example:
+                                msg: Please provide valid course id
+                "404":
+                    description: Course not found
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    msg:
+                                        type: string
+                            example:
+                                msg: Course not found
